--- a/appsettings.json
+++ b/appsettings.json
@@ -21,9 +21,14 @@
     "Description": "API for managing item deliveries between suppliers and customers"
   },
   "FileStorage": {
-    "MaxFileSizeInMB": 10,
-    "AllowedExtensions": [ ".jpg", ".jpeg", ".png", ".gif" ],
-    "StoragePath": "uploads/items"
+    "BasePath": "uploads",
+    "ItemImagesPath": "items",
+    "ProfileImagesPath": "profiles",
+    "MaxFileSizeInBytes": 5242880,
+    "AllowedExtensions": [ ".jpg", ".jpeg", ".png", ".gif", ".webp" ],
+    "AllowedMimeTypes": [ "image/jpeg", "image/png", "image/gif", "image/webp" ],
+    "UsePhysicalPath": true,
+    "BaseUrl": "/uploads"
   },
   "ExternalServices": {
     "GoogleMapsApiKey": "your-google-maps-api-key-here",
