--- a/appsettings.json
+++ b/appsettings.json
@@ -39,5 +39,12 @@
       "Username": "your-email@gmail.com",
       "Password": "your-app-password"
     }
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:7000"
+      }
+    }
   }
 }
